Fixed HistoryBar layout problem in IE7
git-svn-id: https://ekptrac.physik.uni-karlsruhe.de/svn/HappyFace/trunk@150 5ec1a27d-59bc-451c-a1e5-77859e3e35f3

--- a/webpage/config/TabNavigation.css
+++ b/webpage/config/TabNavigation.css
@@ -125,6 +125,9 @@
 	text-align: center;
 	height:30px;
 }
+.HappyTitleBarElementTable form {
+	margin: 0px 0px 0px 0px;
+}
 
 /* Information table for each module which shows up after clicking
  * on the status button.
